--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -22,3 +22,13 @@
   year={1981},
   publisher={American Geophysical Union}
 }
+
+@article{garner2005,
+  title={A Topographic Drag Closure Built on an Analytical Base Flux},
+  author={Garner, Stephen T},
+  journal={Journal of the Atmospheric Sciences},
+  volume={62},
+  pages={2302--2315},
+  year={2005},
+  publisher={American Meteorological Society}
+}
