--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -14,7 +14,7 @@
 
 @article{lindzen1981,
   title={Turbulence and stress owing to gravity wave and tidal breakdown},
-  author={Lindzed, Richard S},
+  author={Lindzen, Richard S},
   journal={Journal of Geophysical Research: Oceans},
   volume={86},
   number={C10},
