Clean up plots 	modified:   post_processing/plot/plot_helpers.jl 	modified:   post_processing/plot/plot_pipeline.jl + API Docs for initial conditions         modified:   docs/src/api.md 	modified:   docs/bibliography.bib 	modified:   src/initial_conditions/initial_conditions.jl

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -32,3 +32,190 @@
   year={2005},
   publisher={American Meteorological Society}
 }
+
+@article{Kosovic2000,
+  author    =  {B. Kosović and J. A. Curry},
+  title     =  {A large eddy simulation study of a quasi-steady, stably stratified atmospheric boundary layer},
+  year      =  {2000},
+  journal   =  {J. Atmos. Sci.},
+  volume    =  {57},
+  pages     =  {1052--1068},
+}
+
+@article{Shen2022,
+  title={A Library of Large-Eddy Simulations Forced by Global Climate Models},
+  author={Shen, Zhaoyi and Sridhar, Akshay and Tan, Zhihong and Jaruga, Anna and Schneider, Tapio},
+  journal={Journal of Advances in Modeling Earth Systems},
+  volume={14},
+  number={3},
+  pages={e2021MS002631},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{Lopez2020,
+  title={A generalized mixing length closure for eddy-diffusivity mass-flux schemes of turbulence and convection},
+  author={Lopez-Gomez, Ignacio and Cohen, Yair and He, Jia and Jaruga, Anna and Schneider, Tapio},
+  journal={Journal of Advances in Modeling Earth Systems},
+  volume={12},
+  number={11},
+  pages={e2020MS002161},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{Cohen2020,
+  title={Unified entrainment and detrainment closures for extended eddy-diffusivity mass-flux schemes},
+  author={Cohen, Yair and Lopez-Gomez, Ignacio and Jaruga, Anna and He, Jia and Kaul, Colleen M and Schneider, Tapio},
+  journal={Journal of Advances in Modeling Earth Systems},
+  volume={12},
+  number={9},
+  pages={e2020MS002162},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{He2020,
+  title = {An Improved Perturbation Pressure Closure for Eddy-Diffusivity Mass-Flux Schemes},
+  author = {He, Jia and Cohen, Yair and Lopez-Gomez, Ignacio and Jaruga, Anna and Schneider, Tapio},
+  journal = {Journal of Advances in Modeling Earth Systems},
+  year = {2020},
+  doi = {10.1002/essoar.10505084.2},
+}
+
+@article{Nishizawa2018,
+  title = {A Surface Flux Scheme Based on the Monin-Obukhov Similarity for Finite Volume Models},
+  author = {Nishizawa, S and Kitamura, Y},
+  journal = {Journal of Advances in Modeling Earth Systems},
+  volume = {10},
+  number = {12},
+  doi = {10.1029/2018MS001534},
+  pages = {3159--3175},
+  year = {2018},
+  publisher = {Wiley Online Library}
+}
+
+@article{Tan2018,
+  title = {An extended eddy-diffusivity mass-flux scheme for unified representation of subgrid-scale turbulence and convection},
+  author = {Tan, Zhihong and Kaul, Colleen M and Pressel, Kyle G and Cohen, Yair and Schneider, Tapio and Teixeira, Jo{\~a}o},
+  journal = {Journal of Advances in Modeling Earth Systems},
+  volume = {10},
+  number = {3},
+  pages = {770--800},
+  year = {2018},
+  publisher = {Wiley Online Library},
+  doi = {https://doi.org/10.1002/2017MS001162}
+}
+
+@incollection{Nieuwstadt1993,
+  title = {Large-eddy simulation of the convective boundary layer: A comparison of four computer codes},
+  author = {Nieuwstadt, Frans TM and Mason, Paul J and Moeng, Chin-Hoh and Schumann, Ulrich},
+  booktitle = {Turbulent shear flows 8},
+  pages = {343--367},
+  year = {1993},
+  publisher = {Springer}
+}
+
+@article{Soares2004,
+  title = {An eddy-diffusivity/mass-flux parametrization for dry and shallow cumulus convection},
+  author = {Soares, PMM and Miranda, PMA and Siebesma, AP and Teixeira, J},
+  journal = {Quarterly Journal of the Royal Meteorological Society: A journal of the atmospheric sciences, applied meteorology and physical oceanography},
+  volume = {130},
+  number = {604},
+  pages = {3365--3383},
+  year = {2004},
+  publisher = {Wiley Online Library},
+  doi = {https://doi.org/10.1256/qj.03.223}
+}
+
+@article{Grabowski2006,
+  title = {Daytime convective development over land: A model intercomparison based on LBA observations},
+  author = {Grabowski, WW and Bechtold, P and Cheng, A and Forbes, R and Halliwell, C and Khairoutdinov, M and Lang, S and Nasuno, T and Petch, J and Tao, W-K and others},
+  journal = {Quarterly Journal of the Royal Meteorological Society: A journal of the atmospheric sciences, applied meteorology and physical oceanography},
+  volume = {132},
+  number = {615},
+  pages = {317--344},
+  year = {2006},
+  publisher = {Wiley Online Library}
+}
+
+@article{Stevens2005,
+  title = {Evaluation of large-eddy simulations via observations of nocturnal marine stratocumulus},
+  author = {Stevens, Bjorn and Moeng, Chin-Hoh and Ackerman, Andrew S and Bretherton, Christopher S and Chlond, Andreas and de Roode, Stephan and Edwards, James and Golaz, Jean-Christophe and Jiang, Hongli and Khairoutdinov, Marat and others},
+  journal = {Monthly weather review},
+  volume = {133},
+  number = {6},
+  pages = {1443--1462},
+  year = {2005},
+  doi = {http://dx.doi.org/10.1175/MWR2930.1}
+}
+
+@article{Byun1990,
+  title = {On the analytical solutions of flux-profile relationships for the atmospheric surface layer},
+  author = {Byun, Daewon W},
+  journal = {Journal of Applied Meteorology (1988-2005)},
+  pages = {652--657},
+  year = {1990},
+  publisher = {JSTOR},
+  doi = {http://dx.doi.org/10.1175/1520-0450(1990)029<0652:OTASOF>2.0.CO;2}
+}
+
+@article{Brown2002,
+  title = {Large-eddy simulation of the diurnal cycle of shallow cumulus convection over land},
+  author = {Brown, AR and Cederwall, RT and Chlond, A and Duynkerke, PG and Golaz, J-C and Khairoutdinov, M and Lewellen, DC and Lock, AP and MacVean, MK and Moeng, C-H and others},
+  journal = {Quarterly Journal of the Royal Meteorological Society: A journal of the atmospheric sciences, applied meteorology and physical oceanography},
+  volume = {128},
+  number = {582},
+  pages = {1075--1093},
+  year = {2002},
+  publisher = {Wiley Online Library}
+}
+
+@article{Khairoutdinov2009,
+  title = {Large-eddy simulation of maritime deep tropical convection},
+  author = {Khairoutdinov, Marat F and Krueger, Steve K and Moeng, Chin-Hoh and Bogenschutz, Peter A and Randall, David A},
+  journal = {Journal of Advances in Modeling Earth Systems},
+  volume = {1},
+  number = {4},
+  year = {2009},
+  publisher = {Wiley Online Library}
+}
+
+@article{Ackerman2009,
+  title = {Large-Eddy Simulations of a Drizzling, Stratocumulus-Topped Marine Boundary Layer},
+  author = {Andrew S. Ackerman and Margreet C. vanZanten and Bjorn Stevens and Verica Savic-Jovcic and Christopher S. Bretherton and Andreas Chlond and Jean-Christophe Golaz and Hongli Jiang and Marat Khairoutdinov and Steven K. Krueger and David C. Lewellen and Adrian Lock and Chin-Hoh Moeng and Kozo Nakamura and Markus D. Petters and Jefferson R. Snider and Sonja Weinbrecht and Mike Zulauf},
+  journal = {Monthly Weather Review},
+  volume = {137},
+  number = {3},
+  year = {2009},
+  pages = {1083--1110},
+  doi = {10.1175/2008MWR2582.1},
+}
+
+@article{Holland1973,
+  author   = {JOSHUA Z.  HOLLAND and EUGENE M.  RASMUSSON},
+  title    = {Measurements of the Atmospheric Mass, Energy, and Momentum Budgets Over a 500-Kilometer Square of Tropical Ocean},
+  journal  = {Monthly Weather Review},
+  year     = {1973},
+  publisher= {American Meteorological Society},
+  address  = {Boston MA, USA},
+  volume   = {101},
+  number   = {1},
+  doi      = {https://doi.org/10.1175/1520-0493(1973)101<0044:MOTAME>2.3.CO;2},
+  pages    = {44 - 55},
+  url      = {https://journals.ametsoc.org/view/journals/mwre/101/1/1520-0493_1973_101_0044_motame_2_3_co_2.xml},
+}
+
+@article{Rauber2007,
+  author    = {Robert M. Rauber and Bjorn Stevens and Harry T. Ochs and Charles Knight and B. A. Albrecht and A. M. Blyth and C. W. Fairall and J. B. Jensen and S. G. Lasher-Trapp and O. L. Mayol-Bracero and G. Vali and J. R. Anderson and B. A. Baker and A. R. Bandy and E. Burnet and J.-L. Brenguier and W. A. Brewer and P. R. A. Brown and R Chuang and W. R. Cotton and L. Di Girolamo and B. Geerts and H. Gerber and S. Göke and L. Gomes and B. G. Heikes and J. G. Hudson and P. Kollias and R. R Lawson and S. K. Krueger and D. H. Lenschow and L. Nuijens and D. W. O'Sullivan and R. A. Rilling and D. C. Rogers and A. P. Siebesma and E. Snodgrass and J. L. Stith and D. C. Thornton and S. Tucker and C. H. Twohy and P. Zuidema},
+  title     = {Rain in Shallow Cumulus Over the Ocean: The RICO Campaign},
+  journal   = {Bulletin of the American Meteorological Society},
+  year      = {2007},
+  publisher = {American Meteorological Society},
+  address   = {Boston MA, USA},
+  volume    = {88},
+  number    = {12},
+  doi       = {https://doi.org/10.1175/BAMS-88-12-1912},
+  pages     = {1912 - 1928},
+  url       = {https://journals.ametsoc.org/view/journals/bams/88/12/bams-88-12-1912.xml}
+}
